feat(book): add feature book
