# src/application/books/dto/index.ts
@@ -1,0 +1,5 @@
+import {CreateBookApplicationDto} from './create-book-application.dto';
+import {UpdateBookApplicationDto} from './update-book-application.dto';
+import {ReadBookApplicationDto} from './read-book-application.dto';
+
+export {CreateBookApplicationDto, UpdateBookApplicationDto, ReadBookApplicationDto}
